tests/valid/deprecation/domain_level_boundary_conditions_deprecation.esm
{
  "esm": "0.2.0",
  "metadata": {
    "name": "DomainLevelBoundaryConditions_Deprecation",
    "description": "Transitional v0.1.0-style file that declares boundary_conditions under domains.<d>. Under v0.2.0 this field is retained as a deprecation shim (RFC §10.1 + gt-2fvs mayor decision): loading must SUCCEED but emit E_DEPRECATED_DOMAIN_BC. The migration tool (gt-fmrq) rewrites files of this shape to model-level boundary_conditions; a follow-up bead will flip this from warning to hard error once all in-tree fixtures have been migrated.",
    "authors": ["ESM Conformance Suite"],
    "created": "2026-04-19T00:00:00Z",
    "tags": ["migration", "deprecation", "v0.2.0", "boundary-conditions", "transitional"]
  },
  "models": {
    "SimpleModel": {
      "variables": {
        "u": {"type": "state", "default": 0.0}
      },
      "equations": [
        {
          "lhs": {"op": "D", "args": ["u"], "wrt": "t"},
          "rhs": {"op": "laplacian", "args": ["u"]}
        }
      ]
    }
  },
  "domains": {
    "default": {
      "independent_variable": "t",
      "temporal": {
        "start": "2024-01-01T00:00:00Z",
        "end": "2024-01-01T01:00:00Z"
      },
      "spatial": {
        "x": {"min": 0.0, "max": 1.0, "units": "m", "grid_spacing": 0.1}
      },
      "initial_conditions": {
        "type": "constant",
        "value": 0.0
      },
      "boundary_conditions": [
        {
          "type": "zero_gradient",
          "dimensions": ["x"]
        }
      ]
    }
  }
}
